<resources>
    <string name="app_name">Clean Out Loud</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="invalid_user_pass">Invalid username or password!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="login_btn">Login</string>
    <string name="skip_btn">Skip</string>
    <string name="register">Create new user</string>
    <string name="choose_camp">Choose camp</string>
    <string name="no_account">No user? Make a new one here!</string>
    <string name="already_user">Do you already have a user? Log in here!</string>

    <string name="wall_btn">Wall</string>
    <string name="topscorer">Topscorer</string>
    <string name="logout">Logout</string>

    <string name="date_error">Could not get date</string>
    <string name="please_wait">Please wait&#8230;</string>

    <string name="add_new_comment">Add comment</string>
    <string name="add_comment">Type a comment</string>
    <string name="add_message">Write new message</string>
    <string name="add_new_message">Create new message</string>
    <string name="type_message">Type the message you wish to post</string>
    <string name="choose_your_camp">Choose your camp</string>
    <string name="choose_a_camp">Choose a camp</string>
    <string name="cancel">Cancel</string>
    <string name="user_not_created">The user could not be created - try another username</string>

    <string name="resource_not_found">Requested resource not found</string>
    <string name="server_error">Something went wrong at server end</string>
    <string name="unexpected_error">Unexpected Error occcured! [Most common Error: Device might not be connected to Internet or remote server is not up and running]</string>
    <string name="json_error">Error Occured [Server\'s JSON response might be invalid]!</string>

    <string name="password_match">Username and password do not match</string>
    <string name="blank_form">Please fill the form, don\'t leave any field blank</string>
    <string name="login_success">You are successfully logged in!</string>
    <string name="trash_point">Garbage collection</string>
    <string name="add_trash_to">Add trash to&#160;</string>
    <string name="add">Add</string>
    <string name="trash_added">The trash has been added</string>
    <string name="kg">&#160;kg.</string>
    <string name="msg_id_not_found">The ID of the message could not be found</string>
    <string name="add_comment_error">You cannot post an empty message</string>


</resources>
